# Celeritas

./: .editorconfig  .gitignore  Celeritas.sln  Celeritas.slnx  LICENSE.md  README.md  ROADMAP.md  THIRD-PARTY-NOTICES.md
.github/workflows/: ci.yml  python-ci.yml
bindings/python/: README.md  __init__.py  celeritas.py  example.py  pyproject.toml  run_tests.py  setup.py  test_celeritas.py
bindings/python/celeritas/: __init__.py  celeritas.py  dotnet.py
docs/: COOKBOOK.md
examples/: .gitignore  01-notation-basics.cs  02-round-trip.cs  03-directives.cs  04-chord-analysis.cs  05-key-detection.cs  06-melody-rhythm-analysis.cs  07-progression-analysis.cs  08-form-polyphony.cs  09-harmonization-voiceleading.cs  10-ornamentation.cs  11-performance-simd.cs  12-midi-import-export.cs  README.md
scripts/: build-python-native.ps1  verify.ps1
src/Celeritas/: Celeritas.csproj
src/Celeritas.Benchmarks/: Celeritas.Benchmarks.csproj  Program.cs
src/Celeritas.CLI/: Celeritas.CLI.csproj  Program.cs
src/Celeritas.Native/: Celeritas.Native.csproj  NativeExports.cs
test-data/: README.md
tests/Celeritas.Tests/: AccompanimentGeneratorTests.cs  Celeritas.Tests.csproj  ChordAnalyzerTests.cs  ChordSymbolAntlrParserTests.cs  CircleOfFifthsTests.cs  FiguredBassTests.cs  FormAnalyzerTests.cs  FunctionalProgressionsTests.cs  HarmonicColorAnalyzerTests.cs  KeyAnalyzerTests.cs  MelodyHarmonizerTests.cs  MidiEventsWriteTests.cs  MidiFileExtensionsTests.cs  MidiIoTests.cs  ModalProgressionsTests.cs  ModalSystemTests.cs  MusicMathTests.cs  MusicNotationAntlrParserTests.cs  MusicNotationTests.cs  NoteArithmeticTests.cs  NoteBufferTests.cs  (+10 more)
(+87 files in other folders)
